force-app/main/default/objects/LeadConversionReportData__c/LeadConversionReportData__c.object-meta.xml
<CustomObject>
    <description>Object contains the records with all the stages from the report with their amount last month and current month</description>
    <label>LeadConversionReportData</label>
    <nameField>
        <label>Stage</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>LeadConversionReportDatas</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>