force-app/main/default/objects/LeadConversionReportData__c/fields/CurrentMonthAmount__c.field-meta.xml
<CustomField>
    <fullName>CurrentMonthAmount__c</fullName>
    <description>Stores the amount of a particular stage of the current month</description>
    <label>CurrentMonthAmount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>