force-app/main/default/objects/LeadConversionReportData__c/fields/LastMonthAmount__c.field-meta.xml
<CustomField>
    <fullName>LastMonthAmount__c</fullName>
    <description>Stores the amount of the particular stage that of last month.</description>
    <label>LastMonthAmount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>