force-app/main/default/objects/LeadConversionReportData__c/fields/LeadVelocityRate__c.field-meta.xml
<CustomField>
    <fullName>LeadVelocityRate__c</fullName>
    <description>This field calculates the percentage of lead conversion compared to last month and the current month</description>
    <formula>((CurrentMonthAmount__c -  LastMonthAmount__c ) /  LastMonthAmount__c )</formula>
    <label>LeadVelocityRate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>