force-app/main/default/objects/LeadConversionReportData__c/fields/Month__c.field-meta.xml
<CustomField>
    <fullName>Month__c</fullName>
    <description>It stores the month name ,during which the lead conversion rate has been calculated for  a particular stage</description>
    <label>Month</label>
    <length>25</length>
    <type>Text</type>
</CustomField>