force-app/main/default/objects/LeadConversionReportData__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>Month__c</columns>
    <columns>NAME</columns>
    <columns>CurrentMonthAmount__c</columns>
    <columns>LastMonthAmount__c</columns>
    <columns>LeadVelocityRate__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>